# sermon_splitter

./: README.md  app.py  ffmpeg-explain.ipynb  main.py  pyproject.toml  sermon_splitter.py  test.py  test.txt
Experiment/Isaac/: ffmpeg-explain.ipynb
backend/utils/: _tests_.py  ffmeg_utils_test.py  ffmpeg_utils.py  ffmpeg_utils_test.py
backend/video/downloader/: manager.py  pytube_downloader.py  ytdlp_downloader.py
backend/video/utils/: folder_utils.py  metadata_utils.py
deprecated/: app.py  sermon_splitter.py
experimental/Isaac/: test_trim.py
experimental/isaac/: ffmpeg-explain.ipynb
src/experimental/: yt_download.py
tests/: test_ffmpeg_utils.py
videos/: herotest.mov
videos/test1/artifacts/: test_vertical.srt
