[project]
name = "sermon-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.4.1",
    "ffmpeg>=1.4",
    "librosa>=0.11.0",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "soundfile>=0.13.1",
    "srt>=3.5.3",
    "transformers>=4.57.1",
    "yt-dlp>=2025.10.14",
]
