[project]
name = "sermon-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.4.1",
    "librosa>=0.11.0",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "soundfile>=0.13.1",
    "srt>=3.5.3",
    "streamlit>=1.50.0",
    "transformers>=4.57.1",
    "torch",
    "pytubefix>=10.3.4",
]
